k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: py-bay-fast-api
  namespace: py-bay-fast-api
  labels:
    app: py-bay-fast-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: py-bay-fast-api
  template:
    metadata:
      labels:
        app: py-bay-fast-api
    spec:
      containers:
        - name: py-bay-fast-api
          image: boeingpo/py-bay-fast-api:v.1.0.0
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
