k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: py-bay-fast-api
  namespace: py-bay-fast-api
spec:
  selector:
    app: py-bay-fast-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
